<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/main_players_menu_item"
            android:enabled="true"
            android:title="@string/players_title"
            android:icon="@drawable/ic_people_black_24dp"
            android:iconTint="@color/grey_400"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/main_matches_menu_item"
            android:enabled="true"
            android:title="@string/matches_title"
            android:icon="@drawable/ic_timeline_black_24dp"
            android:iconTint="@color/grey_400"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/main_results_menu_item"
            android:enabled="true"
            android:title="@string/results_title"
            android:icon="@drawable/ic_results_black_24dp"
            android:iconTint="@color/grey_400"
            app:showAsAction="ifRoom" />
</menu>