<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
            android:id="@+id/home_title"
            android:text="@string/home_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="48sp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_centerInParent="true">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/home_players_button"
                android:orientation="vertical">
            <ImageView
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    app:srcCompat="@drawable/peter_beardsley"
                    android:scaleType="centerCrop"

            />
            <TextView
                    android:id="@+id/home_players_button_text"
                    android:text="@string/players_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:gravity="center"
            />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/home_matches_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="vertical">

            <ImageView
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/fives"
            />

            <TextView
                    android:id="@+id/home_matches_button_text"
                    android:text="@string/matches_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:gravity="center"
            />
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_below="@id/home_matches_button"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

            <ImageView
                    android:id="@+id/home_results_button"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/footballscores303"

            />
            <TextView
                    android:id="@+id/home_results_button_text"
                    android:text="@string/results_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:gravity="center"
            />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
