<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_match_content_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/match_date_time_location_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="?attr/actionBarPopupTheme" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="56dp"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/match_date_time_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_access_time_black_24dp"
        android:tint="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/vertical_two"
        app:layout_constraintStart_toStartOf="@+id/vertical_one"
        app:layout_constraintTop_toBottomOf="@id/match_date_time_location_toolbar" />

    <TextView
        android:id="@+id/match_date_and_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/match_date_and_time_title"
        android:textAppearance="@style/Medium.Bold"
        app:layout_constraintBottom_toBottomOf="@+id/match_date_time_icon"
        app:layout_constraintStart_toStartOf="@id/vertical_two"
        app:layout_constraintTop_toTopOf="@+id/match_date_time_icon" />

    <TextView
        android:id="@+id/match_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="start|center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textAppearance="@style/Body"
        app:layout_constraintEnd_toStartOf="@+id/match_start_time"
        app:layout_constraintStart_toStartOf="@+id/match_date_and_time_title"
        app:layout_constraintTop_toBottomOf="@+id/match_date_and_time_title"
        tools:text="Sat 24 June 2017" />

    <TextView
        android:id="@+id/match_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:textAppearance="@style/Body"
        app:layout_constraintBaseline_toBaselineOf="@id/match_date"
        app:layout_constraintEnd_toStartOf="@+id/match_end_time"
        tools:text="19:00" />

    <TextView
        android:id="@+id/match_end_time"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:textAppearance="@style/Body"
        app:layout_constraintBaseline_toBaselineOf="@id/match_date"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="21:00" />

    <View
        android:id="@+id/horizontal_divider_one"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@color/grey_300"
        app:layout_constraintStart_toStartOf="@+id/vertical_one"
        app:layout_constraintTop_toBottomOf="@+id/match_date" />

    <ImageView
        android:id="@+id/match_location_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="location icon"
        android:src="@drawable/ic_location_on_black_24dp"
        android:tint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@id/vertical_two"
        app:layout_constraintStart_toStartOf="@+id/vertical_one"
        app:layout_constraintTop_toTopOf="@+id/horizontal_divider_one" />

    <TextView
        android:id="@+id/match_location_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/match_location_title"
        android:textAppearance="@style/Medium.Bold"
        app:layout_constraintBottom_toBottomOf="@+id/match_location_icon"
        app:layout_constraintStart_toEndOf="@id/match_location_icon"
        app:layout_constraintTop_toTopOf="@id/match_location_icon" />

    <EditText
        android:id="@+id/match_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/match_enter_location_hint"
        android:inputType="textMultiLine"
        android:maxLines="3"
        android:textAppearance="@style/Body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/vertical_two"
        app:layout_constraintTop_toBottomOf="@id/match_location_title"
        tools:text="Finsbury Leisure Center" />

    <View
        android:id="@+id/horizontal_diver_two"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@color/grey_300"
        app:layout_constraintStart_toStartOf="@+id/vertical_one"
        app:layout_constraintTop_toBottomOf="@id/match_location" />

    <ImageView
        android:id="@+id/match_type_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_people_black_24dp"
        android:tint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@id/vertical_two"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/vertical_one"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_diver_two" />

    <TextView
        android:id="@+id/match_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/match_type"
        android:textAppearance="@style/Medium.Bold"
        app:layout_constraintBottom_toBottomOf="@+id/match_type_icon"
        app:layout_constraintStart_toEndOf="@+id/match_type_icon"
        app:layout_constraintTop_toTopOf="@+id/match_type_icon" />

    <Spinner
        android:id="@+id/match_type_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/match_type_label"
        app:layout_constraintTop_toBottomOf="@+id/match_type_label"
        tools:items="@array/match_types"
        tools:layout_editor_absoluteY="312dp" />

    <View
        android:id="@+id/horizontal_diver_three"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="@color/grey_300"
        app:layout_constraintStart_toStartOf="@+id/vertical_one"
        app:layout_constraintTop_toBottomOf="@+id/match_type_spinner" />

    <Button
        android:id="@+id/match_details_next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_diver_three" />

    <ProgressBar
        android:id="@+id/match_details_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/match_date_time_location_toolbar"
        tools:visibility="gone" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/match_date_time_location_content_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:constraint_referenced_ids="match_location_icon,match_location_title,match_location,horizontal_divider_one,match_date_time_icon,match_date_and_time_title,match_date,match_start_time,match_end_time, horizontal_diver_two,match_type_icon, match_type_label, match_type_spinner, horizontal_diver_three"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>